--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -4,4 +4,39 @@
     padding-right: 80px;
     padding-top: 80;
     padding: 48px;
+    font-family: "Inter", "SF Pro Display", "Montserrat", "Helvetica Neue", Arial, sans-serif;
+}
+
+.footer-logo {
+    width: 50px;
+    height: 50px;
+}
+
+.footer-items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-subHeader {
+    font-size: 14px;
+    font-weight: semi-bold;
+    line-height: 24px;
+    margin-bottom: 16px;
+}
+
+.footer-links {
+    color: #5F6980;
+    font-size: 14px;
+    margin-bottom: 12px;
+}
+
+.footer-contents {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-copyright {
+    width: 100%;
+    text-align: center;
+    color: #5F6980;
 }
