--- a/app/components/navbar.css
+++ b/app/components/navbar.css
@@ -45,9 +45,15 @@
     background-color: white;
     border-color: #F8F7F8;
     border-radius: 32px;
-    border-width: 1px;
+    border-width: 2px;
     height: 64px;
     flex-grow: 1;
+    position: relative;
+}
+
+.navbar-searchbar:focus-within {
+    border-color: #B6349A40;
+    border-width: 2px;
 }
 
 .navbar-searchbar-icon {
@@ -57,6 +63,25 @@
 
 .navbar-searchbar-input {
     width: 100%;
+}
+
+.navbar-searchbar-input:focus {
+    outline: none;
+    /* Need to set search active */
+}
+
+.whole-dropdown {
+    min-height: 100px;
+    background-color: white;
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    border-radius: 24px;
+    top: 117%;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .navbar-cart {
