--- a/app/components/navbar.css
+++ b/app/components/navbar.css
@@ -10,6 +10,7 @@
 .navbar-icon {
     margin-left: 80px;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .navbar-location {
@@ -130,10 +131,16 @@
     border-color: #B6349A;
     border-width: 1px;
     margin-left: 20px;
+    cursor: pointer;
 }
 
 .navbar-login-text {
     font-size: 12px;
     margin-left: 8px;
     font-weight: semi-bold;
+    cursor: pointer;
+}
+
+.navbar-login-icon {
+    cursor: pointer;
 }
