--- a/app/pages/main/main.css
+++ b/app/pages/main/main.css
@@ -12,3 +12,9 @@
 .main-content > *:first-child {
     padding-top: 32px !important;
 }
+
+@media (max-width: 400px) {
+    .main-content > * {
+        padding: 0px;
+    }
+}
