re-structure product slider

--- a/app/components/NavBarComponent/NavBarLoginButton.scss
+++ b/app/components/NavBarComponent/NavBarLoginButton.scss
@@ -17,7 +17,7 @@
 
     .navbar-loginButton-text {
         font-size: 12px;
-        font-weight: semi-bold;
+        font-weight: 600;
         cursor: pointer;
     }
 
