--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -19,7 +19,7 @@
 
 .footer-subHeader {
     font-size: 14px;
-    font-weight: semi-bold;
+    font-weight: 600;
     line-height: 24px;
     margin-bottom: 16px;
 }
