--- a/app/components/NavBarComponent/NavBarCartButton.scss
+++ b/app/components/NavBarComponent/NavBarCartButton.scss
@@ -53,7 +53,7 @@ $mobileBreakpoint: 600px;
             }
             .navbar-cart-stock {
                 font-size: 12px;
-                font-weight: semi-bold;
+                font-weight: 600;
                 color: #B6349A;
             }
         }
