--- a/app/pages/login/main.css
+++ b/app/pages/login/main.css
@@ -26,7 +26,7 @@
 
 .login-content-header {
     font-size: 32px;
-    font-weight: semi-bold;
+    font-weight: 600;
     margin-bottom: 32px;
 }
 
@@ -68,13 +68,13 @@
 
 .login-emailText {
     font-size: 16px;
-    font-weight: semi-bold;
+    font-weight: 600;
     color: #B6349A;
 }
 
 .login-phoneText {
     font-size: 16px;
-    font-weight: semi-bold;
+    font-weight: 600;
     color: black;
 }
 
@@ -87,7 +87,7 @@
 
 .login-getEmail-text {
     font-size: 14px;
-    font-weight: semi-bold;
+    font-weight: 600;
 }
 
 .login-getEmail-input {
@@ -113,7 +113,7 @@
 
 .login-contiune-button-text {
     font-size: 16px;
-    font-weight: semi-bold;
+    font-weight: 600;
 }
 
 .login-divider {
@@ -164,12 +164,12 @@
 
 .loginButton-meta-text {
     font-size: 16px;
-    font-weight: semi-bold;
+    font-weight: 600;
     color: #B6349A;
 }
 
 .loginButton-google-text {
     font-size: 16px;
-    font-weight: semi-bold;
+    font-weight: 600;
     color: black;
 }
