--- a/app/components/productCard.css
+++ b/app/components/productCard.css
@@ -1,4 +1,4 @@
-.whole-productCard {
+/* .whole-productCard {
     display: flex;
     flex-direction: column;
     width: 240px;
@@ -74,4 +74,4 @@
         width: 120px;
     }
 
-}
+} */
