--- a/app/components/NavBarComponent/NavBarLoginButton.scss
+++ b/app/components/NavBarComponent/NavBarLoginButton.scss
@@ -9,6 +9,7 @@
     cursor: pointer;
     gap: 8px;
     min-width: 20px;
+    transition: padding 0.3s, min-width 0.3s, height 0.3s;
 
     .navbar-loginButton-image {
         width: 16px;
@@ -19,15 +20,20 @@
         font-size: 12px;
         font-weight: 600;
         cursor: pointer;
+        width: 36.22px;
+        transition: opacity 0.3s, width 0.3s;
     }
 
     @media (max-width: 700px){
 
         padding: 6px 15px;
         min-width: 20px;
+        height: 40px;
+        gap: 0px;
 
         .navbar-loginButton-text {
-            display: none;
+            opacity: 0;
+            width: 0px;
         }
     }
 
