--- a/app/components/NavBarComponent/NavBarSearchBar.scss
+++ b/app/components/NavBarComponent/NavBarSearchBar.scss
@@ -8,6 +8,7 @@ $mobileBreakpoint: 600px;
     border-color: #F8F7F8;
     border-radius: 32px;
     border-width: 2px;
+    margin-right: 5px;
     height: 64px;
     flex-grow: 1;
     position: relative;
