update footer with mobile version

--- a/app/components/NavBarComponent/NavBarCartButton.scss
+++ b/app/components/NavBarComponent/NavBarCartButton.scss
@@ -66,6 +66,7 @@ $mobileBreakpoint: 600px;
 
         .navbar-cart-text {
             font-size: 14px;
+            font-weight: 600;
         }
     }
 
