--- a/app/components/NavBarComponent/NavBarSearchBar.scss
+++ b/app/components/NavBarComponent/NavBarSearchBar.scss
@@ -21,6 +21,7 @@ $mobileBreakpoint: 600px;
     }
 
     .navbar-searchbar-input {
+        margin-left: 5px;
         width: 100%;
     }
     .navbar-searchbar-input::placeholder {
