update location svg to png

--- a/app/components/FooterV2.scss
+++ b/app/components/FooterV2.scss
@@ -55,6 +55,7 @@ $mobileBreakpoint: 600px;
     font-weight: 600;
     line-height: 24px;
     margin-bottom: 16px;
+    color: black;
 }
 
 .footer-links {
