--- a/app/components/NavBarComponent/NavBarLocation.scss
+++ b/app/components/NavBarComponent/NavBarLocation.scss
@@ -8,4 +8,9 @@
         font-size: 14px;
         color: black;
     }
+
+    .navbar-location-image {
+        width: auto;
+        height: 16px;
+    }
 }
