fix .whole-footer-root padding error

--- a/app/components/FooterV2.scss
+++ b/app/components/FooterV2.scss
@@ -4,7 +4,7 @@ $mobileBreakpoint: 600px;
     width: 100vw;
     padding-left: 80px;
     padding-right: 80px;
-    padding-top: 80;
+    padding-top: 80px;
     padding-bottom: 48px;
 
     @media (max-width: $mobileBreakpoint) {
