--- a/app/components/ProductPageComponent/ProductReview.scss
+++ b/app/components/ProductPageComponent/ProductReview.scss
@@ -1,3 +1,5 @@
+$mobileBreakpoint: 600px;
+
 .productReview-root {
     display: flex;
     gap: 64px;
@@ -6,6 +8,10 @@
     background-color: #FCFCFC;
     border-width: 1px;
     border-color: #F8F7F8;
+
+    @media (max-width: $mobileBreakpoint) {
+        flex-direction: column;
+    }
 
     .productReview-star {
         width: 16px;
