--- a/app/pages/product/main.scss
+++ b/app/pages/product/main.scss
@@ -1,3 +1,5 @@
+$mobileBreakpoint: 600px;
+
 .productPage-root {
     padding-left: 80px;
     padding-right: 80px;
@@ -5,6 +7,11 @@
     flex-direction: column;
     gap: 24px;
     padding-top: 24px;
+
+    @media (max-width: $mobileBreakpoint) {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
 
     .productPage-path {
         display: flex;
