added cart count using createContext, connect add to cart button and cart count

--- a/app/components/NavBarComponent/NavBarCartButton.scss
+++ b/app/components/NavBarComponent/NavBarCartButton.scss
@@ -32,6 +32,7 @@ $mobileBreakpoint: 600px;
             border-radius: 32px;
             padding-top: 6px;
             padding-bottom: 6px;
+            gap: 2px;
 
             @media (max-width: 700px) {
                 background-color: #B6349A;
