--- a/app/components/NavBarComponent/NavBarCartButton.scss
+++ b/app/components/NavBarComponent/NavBarCartButton.scss
@@ -4,6 +4,7 @@ $mobileBreakpoint: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     border-radius: 39px;
     background-color: #FEF5FD;
     padding-left: 6px;
