--- a/app/components/NavBarV2.scss
+++ b/app/components/NavBarV2.scss
@@ -44,10 +44,12 @@ $mobileBreakpoint: 600px;
         .easyMartLogo {
             min-width: 115px;
             height: auto;
+            margin-right: 20px;
         }
         .top-navbar-spacer {
             min-width: 0px;
             flex-grow: 1;
+            flex-shrink: 1;
         }
         .RightNavItems {
             display: flex;
