--- a/app/pages/cart/main.scss
+++ b/app/pages/cart/main.scss
@@ -234,7 +234,7 @@ $mobileBreakpoint: 600px;
                 .cartPage-freeShippingInfo-bar-fill {
                     height: 100%;
                     background-color: #B6349A;
-                    border-radius: 4px 0 0 4px;
+                    border-radius: 4px;
                 }
             }
             .cartPage-freeShippingInfo-text {
