update cart page resposive setting & mobile version layout, completed remove button

--- a/app/components/cartPageComponent/ItemList.scss
+++ b/app/components/cartPageComponent/ItemList.scss
@@ -3,6 +3,11 @@
     border-color: #F8F7F8;
     border-radius: 39px;
     border-width: 1px;
+    transition: padding 0.3s ease-in-out;
+
+    @media (max-width: 810px) {
+        padding: 24px 5px;
+    }
     .ItemList-header {
         font-size: 14px;
         color: #686069;
