--- a/app/pages/cart/main.scss
+++ b/app/pages/cart/main.scss
@@ -1,5 +1,30 @@
 $mobileBreakpoint: 600px;
 
+.cartPage-desktop-navBar {
+    display: block;
+    @media (max-width: $mobileBreakpoint) {
+        display: none;
+    }
+}
+
+.cartPage-mobile-navBar {
+    display: flex;
+    align-items: center;
+    padding: 22px 16px;
+    gap: 16px;
+    @media (min-width: $mobileBreakpoint) {
+        display: none;
+    }
+    .cartPage-mobile-navBar-image {
+        width: 20px;
+        height: auto;
+    }
+    .cartPage-mobile-navBar-header {
+        font-size: 20px;
+        font-weight: 600;
+    }
+}
+
 .cartPage-root {
     display: flex;
     gap: 48px;
